tech: use virtual thread executors internally